--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,13 @@
 [build]
   command = "npm run build:prod"
   publish = "dist/" 
+  
+  [[redirects]]
+  from = "/api/*"
+  to = "https://fikingtrader-slnnd.ondigitalocean.app/api/:splat"
+  status = 200
+  force = true
+
 
   [[redirects]]
     from = "/*"
